Include chat statics only in the page where we will need it

--- a/lib/geo_spatial_web/controllers/page_html/home.html.heex
+++ b/lib/geo_spatial_web/controllers/page_html/home.html.heex
@@ -1,4 +1,7 @@
 <.flash_group flash={@flash} />
+<script defer phx-track-static type="text/javascript" src={~p"/assets/src/chat.js"}>
+</script>
+
 <div class="flex w-full bg-gray-400 min-h-screen">
   <div id="map" class="w-4/6 h-screen"></div>
   <div id="chat" class="w-2/6 h-screen bg-gray-200 p-4">
